package com.example.task44;

public interface Aggregate {
    Iterator getIterator();

}

