package com.example.task44;

public interface Iterator {
    boolean hasNext();
    Object next();
    Object preview();
}
